Finish migrating to Java 8 compatible build.