@@ -34,6 +34,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -92,7 +93,7 @@ public class NgrokProcessTest extends NgrokTestCase {
                 .withNgrokPath(ngrokPath2)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Map.of("web_addr", ngrokProcessV2.getApiUrl().substring(7)), javaNgrokConfig2.getNgrokVersion());
+        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Collections.singletonMap("web_addr", ngrokProcessV2.getApiUrl().substring(7)), javaNgrokConfig2.getNgrokVersion());
 
         // WHEN
         NgrokException exception = null;
@@ -132,7 +133,7 @@ public class NgrokProcessTest extends NgrokTestCase {
                 .withNgrokPath(ngrokPath2)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Map.of("web_addr", ngrokProcessV3.getApiUrl().substring(7)), javaNgrokConfigV3.getNgrokVersion());
+        ngrokInstaller.installDefaultConfig(javaNgrokConfig2.getConfigPath(), Collections.singletonMap("web_addr", ngrokProcessV3.getApiUrl().substring(7)), javaNgrokConfigV3.getNgrokVersion());
 
         // WHEN
         NgrokException exception = null;
@@ -190,24 +191,24 @@ public class NgrokProcessTest extends NgrokTestCase {
     public void testMultipleProcessesDifferentBinariesV2() {
         // GIVEN
         assumeTrue(isNotBlank(System.getenv("NGROK_AUTHTOKEN")), "NGROK_AUTHTOKEN environment variable not set");
-        ngrokInstaller.installDefaultConfig(javaNgrokConfigV2.getConfigPath(), Map.of("web_addr", "localhost:4040"), javaNgrokConfigV2.getNgrokVersion());
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV2.getConfigPath(), Collections.singletonMap("web_addr", "localhost:4040"), javaNgrokConfigV2.getNgrokVersion());
         final Path ngrokPathV2_2 = Paths.get(javaNgrokConfigV2.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
         final Path configPathV2_2 = Paths.get(javaNgrokConfigV2.getConfigPath().getParent().toString(), "configV2_2.yml");
         final JavaNgrokConfig javaNgrokConfigV2_2 = new JavaNgrokConfig.Builder(javaNgrokConfigV2)
                 .withNgrokPath(ngrokPathV2_2)
                 .withConfigPath(configPathV2_2)
                 .build();
-        ngrokInstaller.installDefaultConfig(javaNgrokConfigV2_2.getConfigPath(), Map.of("web_addr", "localhost:4041"), javaNgrokConfigV2.getNgrokVersion());
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV2_2.getConfigPath(), Collections.singletonMap("web_addr", "localhost:4041"), javaNgrokConfigV2.getNgrokVersion());
         ngrokProcessV2_2 = new NgrokProcess(javaNgrokConfigV2_2, ngrokInstaller);
 
-        ngrokInstaller.installDefaultConfig(javaNgrokConfigV3.getConfigPath(), Map.of("web_addr", "localhost:4042"), javaNgrokConfigV3.getNgrokVersion());
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV3.getConfigPath(), Collections.singletonMap("web_addr", "localhost:4042"), javaNgrokConfigV3.getNgrokVersion());
         final Path ngrokPath2 = Paths.get(javaNgrokConfigV3.getNgrokPath().getParent().toString(), "2", NgrokInstaller.getNgrokBin());
         final Path configPath2 = Paths.get(javaNgrokConfigV3.getConfigPath().getParent().toString(), "configV3_2.yml");
         final JavaNgrokConfig javaNgrokConfigV3_2 = new JavaNgrokConfig.Builder(javaNgrokConfigV3)
                 .withNgrokPath(ngrokPath2)
                 .withConfigPath(configPath2)
                 .build();
-        ngrokInstaller.installDefaultConfig(javaNgrokConfigV3_2.getConfigPath(), Map.of("web_addr", "localhost:4043"), javaNgrokConfigV3.getNgrokVersion());
+        ngrokInstaller.installDefaultConfig(javaNgrokConfigV3_2.getConfigPath(), Collections.singletonMap("web_addr", "localhost:4043"), javaNgrokConfigV3.getNgrokVersion());
         ngrokProcessV3_2 = new NgrokProcess(javaNgrokConfigV3_2, ngrokInstaller);
 
         // WHEN
